...
          SizedBox(height: 80),
        ],
      );
    }

    return Column(
      key: Key("showReview"),
      mainAxisAlignment: MainAxisAlignment.start,
      children: [
        SizedBox(height: 10),
        Text(
          " Title: " + review!.name,
          textAlign: TextAlign.center,
...
