...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      floatingActionButton: FloatingActionButton(
        key: Key("addReviewButton"),
        onPressed: () {
          context.push("/courses/reviews/newReview", extra: widget.course).then((_) => setState(() {
                reviews = db.getReviews(widget.course, selecteddateOrder, selectedevaluationNumber);
              }));
        },
        child: Icon(Icons.add),
...
