...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        //title: const Text("Settings"),
        actions: [
          Container(
            margin: const EdgeInsets.only(right: 10),
            child: IconButton(
                icon:
                    !sharedPrefs.getPreference(SharedPreferencesService.darkModeKey) ? Icon(Icons.dark_mode_rounded, color: Colors.blueGrey, size: 30,) : Icon(Icons.light_mode_rounded, color: Colors.amber.shade200, size: 30),
...
