...
                                formKey: _form1Key),
                            const SizedBox(height: 30),
                            EditFieldWidget(
                                width: width,
                                controller: firstnameController,
                                isUsername: false,
                                label: 'First Name',
                                initialValue: firstName,
                                edit: editFirstname,
                                editCallback: _updateFirstname,
                                formKey: _form2Key),
                            const SizedBox(height: 30),
                            EditFieldWidget(
...
